--- a/tools/auto_gen/web/web_template/user.html
+++ b/tools/auto_gen/web/web_template/user.html
@@ -15,7 +15,7 @@ TABLE_COLUMNS
     <script src="js/make_data_table.js" type="text/javascript"></script>
 
     <script type="text/javascript">
-        var server_prefix = ;
+        var server_prefix = "http://127.0.0.1/";
 
         function makeProgrammerTable(user) {
             var headers = ["id_","age_","name","gender_","intrests","recent_websites"]
@@ -46,7 +46,7 @@ var id = row.cells[0].innerHTML;document.getElementById("edit_id").value = id;va
 //--------------------------------------        
             document.getElementById("edit_ok").onclick = function () {
 //--------------------------------------   
-var new_id = document.getElementById("edit_id").value;var new_age = document.getElementById("edit_age").value;var new_name = document.getElementById("edit_name").value;var new_gender = document.getElementById("edit_gender").value;var new_intrests = document.getElementById("edit_intrests").value;var new_recent_websites = document.getElementById("edit_recent_websites").value;if ( id != new_id || age != new_age || name != new_name || gender != new_gender || intrests != new_intrests || recent_websites != new_recent_websites){ var url=SERVER_PREFIXupdate?id=" + id+ "&age=" + age+ "&name=" + name+ "&gender=" + gender+ "&intrests=" + intrests+ "&recent_websites=" + recent_websites;
+var new_id = document.getElementById("edit_id").value;var new_age = document.getElementById("edit_age").value;var new_name = document.getElementById("edit_name").value;var new_gender = document.getElementById("edit_gender").value;var new_intrests = document.getElementById("edit_intrests").value;var new_recent_websites = document.getElementById("edit_recent_websites").value;if ( id != new_id || age != new_age || name != new_name || gender != new_gender || intrests != new_intrests || recent_websites != new_recent_websites){ var url="http://127.0.0.1/update?id=" + id+ "&age=" + age+ "&name=" + name+ "&gender=" + gender+ "&intrests=" + intrests+ "&recent_websites=" + recent_websites;
 /*                 var new_id = document.getElementById("edit_id").value;
                 var new_name = document.getElementById("edit_name").value;
                 var new_gender = document.getElementById("edit_gender").value;
@@ -82,7 +82,7 @@ var new_id = document.getElementById("edit_id").value;var new_age = document.get
         }
         function deleteRow(row) {
 //-------------------------------------- 
-var id = row.cells[0].innerHTML;var url=SERVER_PREFIXdelete?id=" + id;
+var id = row.cells[0].innerHTML;var url="http://127.0.0.1/delete?id=" + id;
 /*             var id = row.cells[0].innerHTML;
             var url = server_prefix + 'delete?id=' + id; */
 //-------------------------------------- 
@@ -184,13 +184,13 @@ var id = row.cells[0].innerHTML;var url=SERVER_PREFIXdelete?id=" + id;
         function add() {
             showEditLayer();
 //-------------------------------------- 
-var age = document.getElementById("edit_age").value;var name = document.getElementById("edit_name").value;var gender = document.getElementById("edit_gender").value;var intrests = document.getElementById("edit_intrests").value;var recent_websites = document.getElementById("edit_recent_websites").value;if ( age != null &&name != null &&gender != null &&intrests != null &&recent_websites != null){ var url=SERVER_PREFIXadd?age=" + age+ "&name=" + name+ "&gender=" + gender+ "&intrests=" + intrests+ "&recent_websites=" + recent_websites;_HIDE_AUTO
+$
 /*             document.getElementById("p_edit_id").style.display = 'none'; */
 //--------------------------------------      
             document.getElementById("edit_reset").click();
             document.getElementById("edit_ok").onclick = function () {
 //--------------------------------------         
-var age = document.getElementById("edit_age").value;var name = document.getElementById("edit_name").value;var gender = document.getElementById("edit_gender").value;var intrests = document.getElementById("edit_intrests").value;var recent_websites = document.getElementById("edit_recent_websites").value;if ( age != null &&name != null &&gender != null &&intrests != null &&recent_websites != null){ var url=SERVER_PREFIXadd?age=" + age+ "&name=" + name+ "&gender=" + gender+ "&intrests=" + intrests+ "&recent_websites=" + recent_websites;
+var age = document.getElementById("edit_age").value;var name = document.getElementById("edit_name").value;var gender = document.getElementById("edit_gender").value;var intrests = document.getElementById("edit_intrests").value;var recent_websites = document.getElementById("edit_recent_websites").value;if ( age != null &&name != null &&gender != null &&intrests != null &&recent_websites != null){ var url="http://127.0.0.1/add?age=" + age+ "&name=" + name+ "&gender=" + gender+ "&intrests=" + intrests+ "&recent_websites=" + recent_websites;
 /*                 var name = document.getElementById("edit_name").value;
                 var gender = document.getElementById("edit_gender").value;
                 if (name != null && gender != null) {
@@ -234,7 +234,7 @@ var age = document.getElementById("edit_age").value;var name = document.getEleme
     <form id="form_op_id">
         <p>name: <input type="text" id="name" style="width: 300px"/></p>
         <p><input type="button" class="btn_class" value="Query" onclick="query()"/><input type="button"
-                                                                                          class="btn_class" value="Add"
+                                                                                          class="btn_class" value="Add" 
                                                                                           onclick="add()"/></p>
     </form>
 </div>
@@ -242,7 +242,7 @@ var age = document.getElementById("edit_age").value;var name = document.getEleme
 </div>
 <div id="div_popup_edit" class="popup_window" style="display:none;">
     <form id="form_edit_id">
-    <p id="p_edit_id">id: <input type="text" id="edit_id" readonly style="width: 300px"/></p><p>age: <input type="text" id="edit_age" style="width: 300px"/></p><p>name: <input type="text" id="edit_name" style="width: 300px"/></p><p>gender: <select id="edit_gender" style="width: 300px"></select></p><p>intrests: <input type="text" id="edit_intrests" style="width: 300px"/></p><p>recent_websites: <input type="text" id="edit_recent_websites" style="width: 300px"/></p>
+    <p id="p_edit_id">id: <input type="text" id="edit_id" readonly style="width: 300px"/></p><p>age: <input type="text" id="edit_age" style="width: 300px"/></p><p>name: <input type="text" id="edit_name" style="width: 300px"/></p><p>gender: <select id="edit_gender" style="width: 300px"><option value="male">男</option><option value="female">女</option></select></p><p>intrests: <input type="text" id="edit_intrests" style="width: 300px"/></p><p>recent_websites: <input type="text" id="edit_recent_websites" style="width: 300px"/></p>
     <!--  
         <p id="p_edit_id">id: <input type="text" id="edit_id" readonly style="width: 300px"/></p>
         <p>name: <input type="text" id="edit_name" style="width: 300px"/></p>
